# slack-log

./: .gitignore  LICENSE  README.md  run.sample.sh  slack-archive.cabal  slack-archive.yaml  slack-log.cabal  stack.yaml
.github/actions/rclone/: Dockerfile  README.md  action.yml
.github/workflows/: ci.yml  cron.yml  settings-ci.yml
app/: Main.hs
docs/: main.css
docs/json/: .users.json
docs/templates/: index.mustache.html
src/SlackArchive/: Duration.hs  Html.hs  Pagination.hs  Replies.hs  Types.hs  Util.hs
src/SlackLog/: Pagination.hs  Replies.hs
templates/: messages.mustache.html  thread.mustache.html
test/SlackArchive/: DurationSpec.hs  HtmlSpec.hs  PaginationSpec.hs  RepliesSpec.hs
test/SlackLog/: HtmlSpec.hs  RepliesSpec.hs
test/assets/: .config.json  .timestamps.json  .users.json  expected-index.html  expected-messages.html  expected-replies.html
test/assets/json/C4M4TT8AA/: 1.json  2.json
test/assets/json/C4M4TT8AA/1/: 1547694882.115200.json  1547694883.115200.json
test/assets/json/C4M4TT8AA/2/: 1547694884.115200.json
test/assets/json/C4M4TT8JJ/: 35.json
test/assets/json/C4M4TT8JJ/35/: 1547694882.115200.json
