cabal-version:  2.4
name:           slack-archive
version:        0.1.0.0
author:         Rintaro Itokawa
maintainer:     me@re-taro.dev
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    test/assets/expected-index.html
    test/assets/expected-messages.html
    test/assets/expected-replies.html
    test/assets/json/C4M4TT8JJ/35.json
    templates/index.mustache.html
    templates/messages.mustache.html
    templates/thread.mustache.html

source-repository head
  type: git
  location: https://github.com/suzuka-kosen-festa/slack-archive

common common
  build-depends:
    , base >= 4.7 && < 5
    , QuickCheck
    , aeson
    , aeson-pretty
    , base >=4.7 && <5
    , butcher
    , bytestring
    , directory
    , envy
    , exceptions
    , extra
    , filepath
    , mtl
    , quickcheck-instances
    , safe
    , slack-web
    , template-haskell
    , text
    , time
    , tz
    , unordered-containers
    , yaml
  default-language: Haskell2010

library
  import: common
  exposed-modules:
      SlackArchive.Duration
      SlackArchive.Html
      SlackArchive.Pagination
      SlackArchive.Replies
      SlackArchive.Types
      SlackArchive.Util
      Web.Slack.Instances
  hs-source-dirs:
      src
  build-depends:
    , mustache
    , witherable
  default-language: Haskell2010

executable slack-archive
  import: common
  main-is: Main.hs
  other-modules:
      Paths_slack_archive
  hs-source-dirs:
      app
  build-depends:
    , slack-archive
    , slack-web

test-suite slack-archive-test
  import: common
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      SlackArchive.DurationSpec
      SlackArchive.HtmlSpec
      SlackArchive.PaginationSpec
      SlackArchive.RepliesSpec
      Web.Slack.InstancesSpec
      Paths_slack_archive
  hs-source-dirs:
      test
  build-depends:
    , hspec
    , slack-archive
